--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
 
 <header class="row text-center header">
-   <img src="/img/headshot.png" alt="Author Image" class="img-circle text-center headshot"> 
+   <img src="/img/headshot.jpeg" alt="Author Image" class="img-circle text-center headshot"> 
   <h1 class="author">Justin Lynn Reid</h1>
 </header>
 
