--- a/public/index.html
+++ b/public/index.html
@@ -63,23 +63,23 @@
 
 <section id="social-pane" class="row text-center social">
   
-  <a href="https://twitter.com/%3cusername%3e"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+  <a href="https://twitter.com/synflyn28"><i class="fa fa-twitter" aria-hidden="true"></i></a>
   
   
   
   
-  <a href="https://github.com/%3cusername%3e"><i class="fa fa-github" aria-hidden="true"></i></a>
+  <a href="https://github.com/synflyn28"><i class="fa fa-github" aria-hidden="true"></i></a>
   
   
   
-  <a href="https://linkedin.com/in/%3cusername%3e"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+  <a href="https://linkedin.com/in/justinreid28"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
   
   
   
   
   
   
-  <a href="mailto:you@example.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+  <a href="mailto:jlreid@alumni.unca.edu"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
   
   
 </section>
