bugfix: updated date
Updated date for blog.

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
 <section id="info-pane" class="row text-center info">
   
-  <h3 class="intro">Scientific Programmer, Data Analyst, &amp; Meteorologist</h3>
+  <h3 class="intro">Data Analyst, Scientific Programmer &amp; Meteorologist</h3>
   
   
   <h4 class="description">Federal Contrator @ NOAA&rsquo;s National Centers for Environmental Information</h4>
